@W-18055447 @W-18130362 fix: form error help text alignment (#5502) (#5523)
* fix: form error help text alignment

* fix: form error help text alignment

* fix: sass variable update

* fix: vrt global header impact fix

---------

--- a/ui/components/form-element/horizontal/_index.scss
+++ b/ui/components/form-element/horizontal/_index.scss
@@ -150,3 +150,16 @@
     @include clearfix;
   }
 }
+
+
+.slds-form-element__control:has(.slds-form-element__control) {
+  .slds-form-element__help {
+    margin-left: 0;
+  }
+
+  @include mq-medium-min {
+    .slds-input-has-icon_left .slds-input__icon {
+      left: $spacing-small;
+    }
+  }
+}
